--- a/Atividade_docker/docker-compose.yml
+++ b/Atividade_docker/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    networks:
+      - webNetwork
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
@@ -28,6 +30,8 @@ services:
       - "8080:80"
     depends_on:
       - db
+    networks:
+      - webNetwork
 
 volumes:
   db_data:
